[package]
name = "executor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
junit-parser = {version = "=1.2.0", features = ["serde"]}
once_cell = "1.19.0"
reqwest = {version = "0.12.5", features = ["json"]}
serde = {version = "1.0.193", features = ["derive"]} 
serde-aux = "4.5.0"
serde_json = "1.0.117"
tokio = {version = "1.35.1", features = ["full"]}
tower = "0.4.13"
tower-http = {version="0.5.0", features=["cors", "trace"]}
tracing = "0.1.37" 
tracing-subscriber = { version = "0.3.16", features = ["env-filter"]} 
uuid = {version = "1.6.1", features=["v4"]}
log = "0.4"
pretty_env_logger = "0.4"
amqprs = "1.7.0"

[dev-dependencies]
mockall = "0.12.1"
